<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApplyActivity">
    <LinearLayout
        android:id="@+id/apply_title_top"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:background="#52A4ED"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/apply_act_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_test"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </LinearLayout>
    <ScrollView
        android:id="@+id/apply_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/apply_title_top"
        android:layout_above="@+id/apply_button">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#53A2AC"
                    android:textSize="16sp"
                    android:text="@string/time"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/apply_act_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3dp"
                    android:textColor="#212B2A"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#53A2AC"
                    android:textSize="16sp"
                    android:text="@string/site"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/apply_act_site"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3dp"
                    android:textColor="#212B2A"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#53A2AC"
                    android:textSize="16sp"
                    android:text="@string/award"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/apply_act_award"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3dp"
                    android:textColor="#212B2A"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#53A2AC"
                    android:textSize="16sp"
                    android:text="@string/endTime"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/apply_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3dp"
                    android:textColor="#212B2A"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#53A2AC"
                    android:textSize="16sp"
                    android:text="@string/number"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/apply_act_number1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3dp"
                    android:textColor="#212B2A" />
                <TextView
                    android:id="@+id/apply_act_number2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#212B2A"
                    android:visibility="gone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:src="@mipmap/title_left" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/dept"
                        android:textColor="#53A2AC"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/title_right" />
                </LinearLayout>
                <TextView
                    android:id="@+id/apply_act_dept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingExtra="3dp"
                    android:textColor="#212B2A"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:src="@mipmap/title_left" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/detail"
                        android:textColor="#53A2AC"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/title_right" />
                </LinearLayout>
                <TextView
                    android:id="@+id/apply_act_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#212B2A"
                    android:lineSpacingExtra="3dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/apply_act_remark_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:src="@mipmap/title_left" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/remark"
                        android:textColor="#53A2AC"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/title_right" />
                </LinearLayout>
                <TextView
                    android:id="@+id/apply_act_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#212B2A"
                    android:lineSpacingExtra="3dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/apply_button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_blue"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:stateListAnimator="@null" />
</RelativeLayout>